# Bao

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  qtquickcontrols2.conf
docs/: api_reference.md  architecture.md
docs/uml_diagrams/: bawo_engine_architecture.puml
src/core/enums/: AIDifficulty.h  Direction.h  GamePhase.h  GameType.h  MatchState.h  PlayerType.h  PurchaseType.h  TournamentState.h
src/core/model/: Board.cpp  Board.h  GameState.cpp  GameState.h  Pit.cpp  Pit.h
src/core/serialization/: GameStateSerializer.cpp  GameStateSerializer.h
src/core/value_objects/: MatchSettings.cpp  MatchSettings.h  Move.cpp  Move.h  MoveResult.cpp  MoveResult.h
src/match/: MatchController.cpp  MatchController.h
src/monetization/: AdsManager.cpp  AdsManager.h  BoardStyle.cpp  BoardStyle.h  IAPManager.cpp  IAPManager.h  SeedStyle.cpp  SeedStyle.h  StyleManager.cpp  StyleManager.h
src/network/: LANSession.cpp  LANSession.h  NetworkSession.cpp  NetworkSession.h  OnlineSession.cpp  OnlineSession.h
src/players/: AIPlayer.cpp  AIPlayer.h  LocalPlayer.cpp  LocalPlayer.h  Player.cpp  Player.h  RemotePlayer.cpp  RemotePlayer.h
src/players/ai/: BoardEvaluator.cpp  BoardEvaluator.h
src/rules/: BawoRulesEngine.cpp  BawoRulesEngine.h  FreeMatchingRuleSet.cpp  FreeMatchingRuleSet.h  HouseRuleSet.cpp  HouseRuleSet.h  PhaseTransitionRule.cpp  PhaseTransitionRule.h  RuleSet.cpp  RuleSet.h  TargRule.cpp  TargRule.h
src/tournament/: Team.cpp  Team.h  TournamentBracket.cpp  TournamentBracket.h  TournamentController.cpp  TournamentController.h  TournamentMatch.cpp  TournamentMatch.h  TournamentRules.cpp  TournamentRules.h
src/undo/: UndoManager.cpp  UndoManager.h
src/utils/: appsettings.cpp  helper.cpp  helper.h
src/viewmodels/: GameTypeSelectorViewModel.cpp  GameTypeSelectorViewModel.h  MatchViewModel.cpp  MatchViewModel.h  StoreViewModel.cpp  StoreViewModel.h  TournamentViewModel.cpp  TournamentViewModel.h
tests/integration/: match_integration_test.cpp
